# niteharts-bot

./: .env.example  .gitignore  AWS_ARCHITECTURE.md  README.md  pyproject.toml
niteharts/: __init__.py  __main__.py  buy_ticket.py  captcha_solver.py  form_data.py
scripts/: deploy.py  ec2_user_data.bash  test_config.py  update_niteharts_configs.py
scripts/ecr/: Dockerfile  build_and_push.bash
