[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niteharts"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "playwright==1.58.0",
    "TwoCaptcha==0.0.1",
    "python-dotenv",
    "boto3"
]

[project.scripts]
niteharts = "niteharts.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["niteharts"]
